Upgrade clang-jni from LLVM 9.0.1 to LLVM 21.1.8
Major upgrade of the clang JNI bindings from LLVM 9.0.1 (2019) to
LLVM 21.1.8 (2025). This fixes a SIGSEGV crash in libclang that
occurred when analyzing certain C++ files in Teamscale (TS-44325).

Changes to the JNI bindings:
- Regenerated SWIG bindings for LLVM 21.1.8 (generated/)
- Added String[] typemap for clang_parseTranslationUnit, allowing
  compiler flags (e.g., -x c++) to be passed from Java
- Added clang_parseTranslationUnit2_wrap for better error reporting
- Removed clang-tidy support (unused by Teamscale)
- Fixed NULL file crash in getSpellingLocationPropertiesImpl and
  getExpansionLocationPropertiesImpl for built-in/synthesized locations
- Fixed visitor callback exception safety: use CXChildVisit_Break
  instead of C++ exceptions to avoid corrupting clang's internal state
- Applied -fexceptions only to JNI source files, not globally
- Embedded version string in native library temp directory name

Build infrastructure:
- Rewrote BUILD.md with full cross-platform build workflow
- Added BUILD-TIMES.md for tracking build durations
- build-linux.sh now supports both Linux and macOS (auto-detects)
- build-linux.sh prints build time after compilation
- Native libraries are transferred between machines via git LFS during
  the build, then removed in a squash commit to keep LFS storage small
- Removed build-mac.md and build-windows.md (superseded by BUILD.md)

Testing:
- Added ClangJniTest with 25 integration tests covering parsing, type
  resolution, typedef chains, operator detection, templates, lambdas,
  OpenMP pragmas, and repeated parse/dispose cycles
- Moved test classes to test/ directory (not included in JAR)
- Added Main.java as JAR entry point for standalone AST debugging

Native libraries included in clang-jni.jar:
- libclang-linux.so (x86_64)
- libclang-mac.dylib (arm64)
- libclang-win.dll (x86_64)